Navbar style update

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,8 +13,8 @@
 .title{
     font-size: 30px;
     font-weight: 600;
+    color: #fff;
     text-decoration: none;
-    color: var(--color-text);
 }
 
 .menu{
