Navbar colour style update

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,7 +13,7 @@
 .title{
     font-size: 30px;
     font-weight: 600;
-    color: #fff;
+    color: var(--colour-text);
     text-decoration: none;
 }
 
