--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,9 +1,9 @@
 @import "../../vars.css";
 
 .container {
-  color: var(--color-text);
+  color: var(--colour-text);
   margin-top: 120px;
-  background-color: var(--color-secondary);
+  background-color: var(--colour-secondary);
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -39,7 +39,7 @@
 }
 
 .link a {
-  color: var(--color-text);
+  color: var(--colour-text);
   text-decoration: none;
   font-size: 30px;
   font-weight: 400;
