--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,14 +1,14 @@
 @import "../../vars.css";
 
 .container {
-  color: var(--color-text);
+  color: var(--colour-text);
   margin-top: 79px;
   margin-left: 10%;
   margin-right: 10%;
 }
 
 .title {
-  color: var(--color-text);
+  color: var(--colour-text);
   font-size: 35px;
   font-weight: 700;
   letter-spacing: 1.75px;
@@ -37,7 +37,7 @@
 }
 
 .skillImageContainer {
-  background-color: var(--color-secondary);
+  background-color: var(--colour-secondary);
   border-radius: 100%;
   display: flex;
   align-items: center;
