--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -39,7 +39,7 @@
   font-size: 25px;
   font-weight: 400;
   border-radius: 100px;
-  background: var(--color-dark);
+  background: var(--colour-dark);
   padding: 2px 22px;
 }
 
@@ -52,10 +52,10 @@
 
 .link {
   text-decoration: none;
-  color: var(--color-text);
+  color: var(--colour-text);
   font-size: 30px;
   font-weight: 600;
   border-radius: 100px;
-  background: var(--color-primary);
+  background: var(--colour-primary);
   padding: 1px 22px;
 }
