Experience refactored to Skills

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -29,7 +29,7 @@
 
 .menuItems a{
     font-size: 25px;
-    color: var(--color-text);
+    color: var(--colour-text);
     text-decoration: none;
 }
 
